# eae

./: .gitignore  environment.yml  pyproject.toml
scripts/: main.py
scripts/preprocessing/: data.py
scripts/preprocessing/core/: modules.py
scripts/preprocessing/tests/: test_data.py
src/ae/: enc.py  loss.py  train.py
src/data/: windowing.py
src/preprocessing/: clean_raws.py  data.py
src/preprocessing/core/: modules.py
src/preprocessing/windows/: window.py
src/src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py  test_modules.py
